Nov 28, 2014 - chris ---------------------------------------------------
o Fixed large file support on linux (thanks, Thomas Fähnle)

Nov 27, 2014 - chris ---------------------------------------------------
o Removed dependency to malloc.h
o issue #42: ham_cursor_find returned wrong key w/ approx. matching and
	transactions

Nov 21, 2014 - chris ---------------------------------------------------
o Fixed compilation error on OSX (thanks, Daniel Lemire)

Nov 20, 2014 - chris ---------------------------------------------------
o Fixed compilation error on debian Wheezy, gcc 4.7.2, 32bit (thanks,
	Thomas Fähnle)

Nov 17, 2014 - chris ---------------------------------------------------
o The macro HAM_API_REVISION is now deprecated; use HAM_VERSION_* instead

Nov 16, 2014 - chris ---------------------------------------------------
o The github wiki is now linked into documentation/wiki

Nov 08, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.9

Nov 08, 2014 - chris ---------------------------------------------------
o C# API now supports approx. matching
o C# auto-cleanup of resources no longer can cause segmentation faults

Nov 01, 2014 - chris ---------------------------------------------------
o Removed outdated project files of MSVC2008, added MSVC2013

Oct 15, 2014 - chris ---------------------------------------------------
o Removed custom ham_* typedefs; now using types from stdint.h

Oct 14, 2014 - chris ---------------------------------------------------
o Fixed a failing test from the erlang package

Oct 10, 2014 - chris ---------------------------------------------------
o Unused pages are now freed with madvice; minor performance improvements
	when large files are mmapped

Oct 06, 2014 - chris ---------------------------------------------------
o Improved record storage and reduced size for fixed length records
o Minor performance improvements for hola_sum