@@ -488,6 +488,9 @@ LocalEnvironment::get_parameters(ham_parameter_t *param)
       case HAM_PARAM_JOURNAL_COMPRESSION:
         p->value = 0;
         break;
+      case HAM_PARAM_POSIX_FADVISE:
+        p->value = m_config.posix_advice;
+        break;
       default:
         ham_trace(("unknown parameter %d", (int)p->name));
         return (HAM_INV_PARAMETER);
