@@ -89,7 +89,8 @@ struct Configuration
       extkey_threshold(0), duptable_threshold(0), bulk_erase(false),
       flush_txn_immediately(false), disable_recovery(false),
       journal_compression(0), record_compression(0), key_compression(0),
-      read_only(false), enable_crc32(false), record_number(false) {
+      read_only(false), enable_crc32(false), record_number(false),
+      posix_fadvice(HAM_POSIX_FADVICE_NORMAL) {
   }
 
   void print() const {
@@ -177,6 +178,12 @@ struct Configuration
       std::cout << "--enable-crc32 ";
     if (record_number)
       std::cout << "--record-number ";
+    if (posix_fadvice)
+      std::cout << "--posix-fadvice="
+              << (posix_fadvice == HAM_POSIX_FADVICE_RANDOM
+                              ? "random"
+                              : "??unknown??")
+              << " ";
     if (!filename.empty())
       std::cout << filename;
     else {
@@ -284,6 +291,7 @@ struct Configuration
   bool read_only;
   bool enable_crc32;
   bool record_number;
+  int posix_fadvice;
 };
 
 #endif /* HAM_BENCH_CONFIGURATION_H */
