@@ -1,3 +1,6 @@
+Dec 05, 2014 - chris ---------------------------------------------------
+o Added a new parameter HAM_PARAM_POSIX_FADVISE (thanks, Thomas Fähnle)
+
 Nov 28, 2014 - chris ---------------------------------------------------
 o Fixed large file support on linux (thanks, Thomas Fähnle)
 
